deploy/oke/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jj-gym-api
  namespace: jj-gym
  labels:
    app: jj-gym-api
spec:
  selector:
    app: jj-gym-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
